     for unprivileged user, group do:
     pw=getpwnam(SSH_PRIVSEP_USER); do_setusercontext(pw).  ok provos@
   - stevesk@cvs.openbsd.org 2002/03/20 21:08:08
     [sshd.c]
     strerror() on chdir() fail; ok provos@
   - markus@cvs.openbsd.org 2002/03/21 10:21:20
     [ssh-add.c]
     ignore errors for nonexisting default keys in ssh-add,
     fixes http://bugzilla.mindrot.org/show_bug.cgi?id=158

20020317
 - (tim) [configure.ac] Assume path given with --with-pid-dir=PATH is wanted,
   warn if directory does not exist. Put system directories in front of
   PATH for finding entorpy commands.
 - (tim) [contrib/aix/buildbff.sh contrib/aix/inventory.sh] AIX package
   build fixes.  Patch by Darren Tucker <dtucker@zip.com.au>
   [contrib/solaris/buildpkg.sh] add missing dirs to SYSTEM_DIR. Have
   postinstall check for $piddir and add if necessary.

20020311
 - (tim) [contrib/solaris/buildpkg.sh, contrib/solaris/README] Updated to
   build on all platforms that support SVR4 style package tools. Now runs
   from build dir. Parts are based on patches from Antonio Navarro, and
   Darren Tucker.

20020308
 - (djm) Revert bits of Markus' OpenSSL compat patch which was 
   accidentally committed.
 - (djm) Add Markus' patch for compat wih OpenSSL < 0.9.6. 
   Known issue: Blowfish for SSH1 does not work
 - (stevesk) entropy.c: typo in debug message
 - (djm) ssh-keygen -i needs seeded RNG; report from markus@

20020307
 - (djm) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2002/03/06 00:20:54
     [compat.c dh.c]
     compat.c
   - markus@cvs.openbsd.org 2002/03/06 00:23:27
     [compat.c dh.c]
     undo
   - markus@cvs.openbsd.org 2002/03/06 00:24:39
     [compat.c]
     compat.c
   - markus@cvs.openbsd.org 2002/03/06 00:25:55
     [version.h]
     OpenSSH_3.1
 - (djm) Update RPM spec files with new version number
 - (bal) Updated INSTALL to reflect 0.9.6 OpenSSL requirement
 - (bal) Add in check for rpc/types.h since it is needed on